--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "build": {
     "appId": "ytm_enchanced",
+    "productName": "Youtube Music Enchanced",
     "files": [
       "build/**/*",
       "node_modules/**/*",
@@ -31,7 +32,7 @@
       ".desktop"
     ],
     "win": {
-      "icon": "build/src/assets/ytico.png",
+      "icon": "build/src/assets/ytico.jpg",
       "publish": [
         "github"
       ]
