--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,13 @@ jobs:
           node-version: 16.13.0
 
       - name: Install typescript
-        run: npm i -g typescript
+        run: npm install
 
       - name: Build typescript
         run: npm run compile
+
+      - name: Tsc
+        run: npx tsc
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1.6.0
