--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,9 @@
-on: push
+on: 
+  push: 
+    branches: 
+      - master
+    tags:
+      - 'v*'
 
 jobs:
   release:
@@ -23,14 +28,9 @@ jobs:
       - name: Build typescript
         run: npm run compile
 
-      - name: Tsc
-        run: npx tsc
-
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
           github_token: ${{ secrets.github_token }}
 
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
