--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "electron": "^17.1.0",
     "electron-builder": "^22.14.13",
+    "electron-is-dev": "^2.0.0",
     "ts-node-dev": "^1.1.8"
   }
 }
